dynamic-rupture/regional-only/automated-runs/test_yaml_build/logs/jobid_3875682/3875682.regional-only.out
Tue 03 Sep 2024 11:32:10 PM UTC
num_nodes: 16 ntasks: 16 cpus_per_task:
Line 63 replaced with: OutputFile='/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682'
Job log complete.
Starting SeisSol...
Wed Sep 04 01:32:12, Info:  Using the parameter file parameters.par 
Wed Sep 04 01:32:12, Info:  Reading SeisSol parameter file... 
Wed Sep 04 01:32:12, Info:  In your parameter file, you have specified a non-positive interval for "checkpointinterval" . This mechanism is deprecated and may be removed in a future version of SeisSol. Consider disabling the whole module by setting "checkpoint" to 0 instead by adding "checkpoint = 0" to the "output" section of your parameter file instead. 
Wed Sep 04 01:32:12, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:32:12, Info:  Disabling the wavefield output by setting "outputformat = 10" is deprecated and may be removed in a future version of SeisSol. Consider using the parameter "wavefieldoutput" instead. To disable wavefield output, add "wavefieldoutput = 0" to the "output" section of your parameters file. 
Wed Sep 04 01:32:12, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:32:12, Info:  The field "pickdttype" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:32:12, Info:  The field "faultoutputflag" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:32:12, Info:  The field "boundaries" is no longer in use. You may safely remove it from your parameters file. 
Wed Sep 04 01:32:12, Info:  SeisSol parameter file read successfully. 
Wed Sep 04 01:32:12, Info:  Model information: 
Wed Sep 04 01:32:12, Info:  Elastic model: yes 
Wed Sep 04 01:32:12, Info:  Viscoelastic model: no 
Wed Sep 04 01:32:12, Info:  Anelastic model: no 
Wed Sep 04 01:32:12, Info:  Poroelastic model: no 
Wed Sep 04 01:32:12, Info:  Anisotropic model: no 
Wed Sep 04 01:32:12, Info:  Plasticity: no 
Wed Sep 04 01:32:12, Info:  Welcome to SeisSol 
Wed Sep 04 01:32:12, Info:  Copyright (c) 2012 - 2024  SeisSol Group 
Wed Sep 04 01:32:12, Info:  Version: v1.1.4-148-g60aedc8c (dirty) 
Wed Sep 04 01:32:12, Info:  Built on: Jun 17 2024 21:03:35 
Wed Sep 04 01:32:12, Info:  Last commit: 60aedc8c2ae0a5d9e5a46cc3a40e4eaf1c047225 at 2024-06-06T12:54:08+00:00 
Wed Sep 04 01:32:12, Info:  Compiled with HOST_ARCH = skx 
Wed Sep 04 01:32:12, Info:  Running on (rank=0): "i01r01c03s01" 
Wed Sep 04 01:32:12, Info:  Using MPI with #ranks: 16 
Wed Sep 04 01:32:12, Info:  Node-wide (shared memory) MPI with #ranks/node: 1 
Wed Sep 04 01:32:12, Info:  Using asynchronous MPI routines. 
Wed Sep 04 01:32:12, Info:  Using OMP with #threads/rank: 94 
Wed Sep 04 01:32:12, Info:  OpenMP worker affinity (this process): "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Wed Sep 04 01:32:12, Info:  OpenMP worker affinity (this node)   : "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Wed Sep 04 01:32:12, Info:  Using a communication thread for advancing MPI communication. 
Wed Sep 04 01:32:12, Info:  Communication thread affinity        : "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 01:32:12, Info:  The stack size ulimit is 2097152 [kiB] ( = 2.0000 GiB ). 
Wed Sep 04 01:32:12, Info:  Begin init mesh. 
Wed Sep 04 01:32:12, Info:  Mesh file: "/dss/dsshome1/01/di35poq/mesh/mesh_v07/Haiti_v07_lowres" 
Wed Sep 04 01:32:12, Info:  Running mini SeisSol to determine node weights. 
Wed Sep 04 01:32:12, Info:  miniSeisSol configured with 50000 elements and 10 repeats per process 
Wed Sep 04 01:32:12, Info:  Node weights: mean = 41.2549  std = 0.967182  min = 37.866  median = 41.5166  max = 42.1914 
Wed Sep 04 01:32:12, Info:  Reading PUML mesh 
Wed Sep 04 01:32:12, Info:  Inferring boundary format. 
Wed Sep 04 01:32:12, Info:  Boundary format not given in PUML file; inferring from array shape. 
Wed Sep 04 01:32:12, Info:  Using boundary format: i32 (4xi8) 
Wed Sep 04 01:32:12, Info:  Found 2685422 cells 
Wed Sep 04 01:32:12, Info:  Found 477078 vertices 
Wed Sep 04 01:32:14, Info:  Computing LTS weights. 
Wed Sep 04 01:32:17, Info:  Limiting number of clusters to 2147483646 
Wed Sep 04 01:32:17, Info:  Computing LTS weights. Done.  (108216 reductions.)
Wed Sep 04 01:32:17, Info:  Using the Parmetis partition library and strategy. 
Wed Sep 04 01:32:20, Info:  PUML mesh read in: 8.0363 s (min: 7.9401 s, max: 8.2450 s)
Wed Sep 04 01:32:20, Info:  The mesh has been read. Starting post processing. 
Wed Sep 04 01:32:20, Info:  Extracting fault information. 
Wed Sep 04 01:32:20, Info:  Exchanging ghostlayer metadata. 
Wed Sep 04 01:32:22, Info:  Mesh initialized in: 10.2035 s (min: 10.2032 s, max: 10.2044 s)
Wed Sep 04 01:32:22, Info:  End init mesh. 
Wed Sep 04 01:32:22, Info:  Begin init model. 
Wed Sep 04 01:32:22, Info:  Initialize LTS. 
Wed Sep 04 01:32:22, Info:  Deriving clusters ids for min. time step width / multiRate: 0.000213316 / 2 
Wed Sep 04 01:32:22, Info:  Due to wiggle factor of 1 the minimum timestep size is reduced to 0.000213316 
Wed Sep 04 01:32:22, Info:  Number of elements in time clusters: 
Wed Sep 04 01:32:22, Info:  0: 2088 
Wed Sep 04 01:32:22, Info:  1: 265401 
Wed Sep 04 01:32:22, Info:  2: 1618976 
Wed Sep 04 01:32:22, Info:  3: 538212 
Wed Sep 04 01:32:22, Info:  4: 147352 
Wed Sep 04 01:32:22, Info:  5: 35652 
Wed Sep 04 01:32:22, Info:  6: 11329 
Wed Sep 04 01:32:22, Info:  7: 18592 
Wed Sep 04 01:32:22, Info:  8: 47781 
Wed Sep 04 01:32:22, Info:  9: 39 
Wed Sep 04 01:32:22, Info:  maximum theoretical speedup (compared to GTS): 6.4313 per cell LTS, 4.34786 with the used clustering. 
Wed Sep 04 01:32:22, Info:  Number of elements in dynamic rupture time clusters: 
Wed Sep 04 01:32:22, Info:  0 (dr): 617 
Wed Sep 04 01:32:22, Info:  1 (dr): 78817 
Wed Sep 04 01:32:22, Info:  2 (dr): 309943 
Wed Sep 04 01:32:22, Info:  3 (dr): 2509 
Wed Sep 04 01:32:22, Info:  4 (dr): 0 
Wed Sep 04 01:32:22, Info:  5 (dr): 0 
Wed Sep 04 01:32:22, Info:  6 (dr): 0 
Wed Sep 04 01:32:22, Info:  7 (dr): 0 
Wed Sep 04 01:32:22, Info:  8 (dr): 0 
Wed Sep 04 01:32:22, Info:  9 (dr): 0 
Wed Sep 04 01:32:22, Info:  Initialize Friction Model 
Wed Sep 04 01:32:23, Info:  Initialize cell material parameters. 
Wed Sep 04 01:32:24, Info:  Initialize Memory layout. 
Wed Sep 04 01:32:25, Info:  Initialize cell-local matrices. 
Wed Sep 04 01:32:25, Info:  Initializing Fault, using a quadrature rule with  25  points. 
Wed Sep 04 01:35:56, Info:  Model initialized in: 3 min 34.1684 s (min: 3 min 34.1659 s, max: 3 min 34.1721 s)
Wed Sep 04 01:35:56, Info:  End init model. 
Wed Sep 04 01:35:56, Info:  Setting initial conditions. 
Wed Sep 04 01:35:56, Info:  Using initial condition "Zero" . 
Wed Sep 04 01:35:56, Info:  Reading source. 
Wed Sep 04 01:35:56, Info:  No source term specified. 
Wed Sep 04 01:35:56, Info:  Setting up boundary conditions. 
Wed Sep 04 01:35:56, Info:  Begin init output. 
Wed Sep 04 01:35:56, Info:  Initializing free surface integrator. 
Wed Sep 04 01:35:56, Info:  Initializing free surface integrator. Done. 
Wed Sep 04 01:35:56, Info:  Enabling 2D fault output 
Wed Sep 04 01:35:56, Info:  Initializing Fault output. Number of sub-triangles: 4 
Wed Sep 04 01:35:56, Info:  Initializing XDMF fault output. 
Wed Sep 04 01:35:56, Info:  Fault writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 01:35:57, Info:  Initializing XDMF fault output. Done. 
Wed Sep 04 01:35:57, Info:  Initializing free surface output. 
Wed Sep 04 01:35:57, Info:  Free surface writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Wed Sep 04 01:35:57, Info:  Initializing free surface output. Done. 
Wed Sep 04 01:35:57, Info:  No record points read. 
Wed Sep 04 01:35:57, Info:  Finding meshIds for receivers... 
Wed Sep 04 01:35:57, Info:  Cleaning possible double occurring receivers for MPI... 
Wed Sep 04 01:35:57, Info:  Mapping receivers to LTS cells... 
Wed Sep 04 01:35:57, Info:  Initializing energy output. 
Wed Sep 04 01:35:57, Info:  End init output. 
Wed Sep 04 01:35:57, Info:  Finishing initialization... 
Wed Sep 04 01:35:57, Info:  Starting simulation. 
Wed Sep 04 01:35:57, Info:  Writing faultoutput at time 0.
Wed Sep 04 01:35:57, Info:  Writing faultoutput at time 0. Done.
Wed Sep 04 01:35:57, Info:  Writing free surface at time 0.
Wed Sep 04 01:35:57, Info:  Writing free surface at time 0. Done.
Wed Sep 04 01:35:57, Info:  Writing energy output at time 0 
Wed Sep 04 01:35:57, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Wed Sep 04 01:35:57, Info:  Writing energy output at time 0 Done. 
Wed Sep 04 01:35:57, Info:  Time spent for initial IO: 55.3886 ms (min: 41.9559 ms, max: 68.3577 ms)
Wed Sep 04 01:36:24, Info:  Writing faultoutput at time 0.5.
Wed Sep 04 01:36:24, Info:  Writing faultoutput at time 0.5. Done.
Wed Sep 04 01:36:24, Info:  Writing energy output at time 0.5 
Wed Sep 04 01:36:24, Info:  Elastic energy (total, % kinematic, % potential):  6.6512e+11  , 25.1683  , 74.8317 
Wed Sep 04 01:36:24, Info:  Total momentum (X, Y, Z): 0.00396575  , 0.0064699  , 0.00567019 
Wed Sep 04 01:36:24, Info:  Frictional work (total, % static, % radiated):  6.73024e+11  , 72.8589  , 27.1411 
Wed Sep 04 01:36:24, Info:  Seismic moment (without plasticity): 1.16334e+16  Mw: 4.64047 
Wed Sep 04 01:36:24, Info:  Writing energy output at time 0.5 Done. 
Wed Sep 04 01:36:24, Info:  Time spent this phase (total): 27.1640 s (min: 27.1361 s, max: 27.1949 s)
Wed Sep 04 01:36:24, Info:  Time spent this phase (compute): 27.1086 s (min: 27.0836 s, max: 27.1523 s)
Wed Sep 04 01:36:24, Info:  Time spent this phase (IO): 52.2566 ms (min: 40.5685 ms, max: 83.8267 ms)
Wed Sep 04 01:36:24, Info:  Performance since the start: 9.2654 TFLOP/s (rank 0: 578.8335 GFLOP/s , average over ranks: 579.0882 GFLOP/s ) 
Wed Sep 04 01:36:24, Info:  Performance since last sync point: 9.2654 TFLOP/s (rank 0: 578.8335 GFLOP/s , average over ranks: 579.0882 GFLOP/s ) 
Wed Sep 04 01:36:51, Info:  Writing faultoutput at time 1.
Wed Sep 04 01:36:51, Info:  Writing faultoutput at time 1. Done.
Wed Sep 04 01:36:51, Info:  Writing free surface at time 1.
Wed Sep 04 01:36:51, Info:  Writing free surface at time 1. Done.
Wed Sep 04 01:36:51, Info:  Wrote receivers in 3.46e-07 seconds. 
Wed Sep 04 01:36:51, Info:  Writing energy output at time 1 
Wed Sep 04 01:36:51, Info:  Elastic energy (total, % kinematic, % potential):  5.74201e+12  , 26.9308  , 73.0692 
Wed Sep 04 01:36:51, Info:  Total momentum (X, Y, Z): 0.31987  , 0.335649  , -0.0949743 
Wed Sep 04 01:36:51, Info:  Frictional work (total, % static, % radiated):  5.98271e+12  , 68.9524  , 31.0476 
Wed Sep 04 01:36:51, Info:  Seismic moment (without plasticity): 9.35764e+16  Mw: 5.24411 
Wed Sep 04 01:36:51, Info:  Writing energy output at time 1 Done. 
Wed Sep 04 01:36:51, Info:  Time spent this phase (total): 27.2318 s (min: 27.2245 s, max: 27.2415 s)
Wed Sep 04 01:36:51, Info:  Time spent this phase (compute): 27.2316 s (min: 27.2242 s, max: 27.2414 s)
Wed Sep 04 01:36:51, Info:  Time spent this phase (IO): 51.8798 ms (min: 40.5264 ms, max: 83.7047 ms)
Wed Sep 04 01:36:51, Info:  Performance since the start: 9.2538 TFLOP/s (rank 0: 578.5161 GFLOP/s , average over ranks: 578.3654 GFLOP/s ) 
Wed Sep 04 01:36:51, Info:  Performance since last sync point: 9.2423 TFLOP/s (rank 0: 578.1990 GFLOP/s , average over ranks: 577.6448 GFLOP/s ) 
Wed Sep 04 01:36:51, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:36:51, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:36:51, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:36:51, Info:  Ignoring duplicate synchronisation point at time 1 ; the last sync point was at  1 
Wed Sep 04 01:36:51, Info:  Simulation time (total): 54.3960 s (min: 54.3676 s, max: 54.4206 s)
Wed Sep 04 01:36:51, Info:  Simulation time (compute): 54.2362 s (min: 54.1835 s, max: 54.2949 s)
Wed Sep 04 01:36:51, Info:  Simulation time (IO): 159.3675 ms (min: 123.9338 ms, max: 235.4129 ms)
Wed Sep 04 01:36:51, Info:  Time spent in compute kernels: mean = 50.7809  std = 2.10485  min = 43.6144  median = 51.2247  max = 53.5725 
Wed Sep 04 01:36:51, Info:  Load imbalance: 5.21085 % 
Wed Sep 04 01:36:51, Info:  Regression analysis of compute kernels: 
Wed Sep 04 01:36:51, Info:  "computeLocalIntegration" (total time): 247.301 s ( = 4 min 7.3011 s ) 
Wed Sep 04 01:36:51, Info:  "computeLocalIntegration" ( constant ): 2.2905e-05 (sample size: 252398 , standard error: 2.77127e-11 ) 
Wed Sep 04 01:36:51, Info:  "computeLocalIntegration" ( per element ): 8.33564e-08 (sample size: 252398 , standard error: 2.77127e-11 ) 
Wed Sep 04 01:36:51, Info:  "computeNeighboringIntegration" (total time): 301.492 s ( = 5 min 1.4916 s ) 
Wed Sep 04 01:36:51, Info:  "computeNeighboringIntegration" ( constant ): 0.000136611 (sample size: 252398 , standard error: 3.91345e-11 ) 
Wed Sep 04 01:36:51, Info:  "computeNeighboringIntegration" ( per element ): 9.21543e-08 (sample size: 252398 , standard error: 3.91345e-11 ) 
Wed Sep 04 01:36:51, Info:  "computeDynamicRupture" (total time): 263.701 s ( = 4 min 23.7015 s ) 
Wed Sep 04 01:36:51, Info:  "computeDynamicRupture" ( constant ): 8.27565e-05 (sample size: 190450 , standard error: 2.06187e-10 ) 
Wed Sep 04 01:36:51, Info:  "computeDynamicRupture" ( per element ): 4.48872e-07 (sample size: 190450 , standard error: 2.06187e-10 ) 
Wed Sep 04 01:36:51, Info:  "computePointSources" (total time): 0 s ( = 0.0000 s ) 
Wed Sep 04 01:36:51, Info:  "computePointSources" ( constant ): -nan (sample size: 0 , standard error: -nan ) 
Wed Sep 04 01:36:51, Info:  "computePointSources" ( per element ): -nan (sample size: 0 , standard error: -nan ) 
Wed Sep 04 01:36:51, Info:  Total time spent in compute kernels: 812.494 s ( = 13 min 32.4942 s ) 
Wed Sep 04 01:36:51, Info:  Total calculated HW-FLOP:  503.3701 TFLOP 
Wed Sep 04 01:36:51, Info:  Total calculated NZ-FLOP:  201.2206 TFLOP 
Wed Sep 04 01:36:51, Info:  Total calculated HW-FLOP/s:  9.2496 TFLOP/s 
Wed Sep 04 01:36:51, Info:  Total calculated NZ-FLOP/s:  3.6975 TFLOP/s 
Wed Sep 04 01:36:51, Info:  WP calculated HW-FLOP:  417.0761 TFLOP 
Wed Sep 04 01:36:51, Info:  WP calculated NZ-FLOP:  137.0571 TFLOP 
Wed Sep 04 01:36:51, Info:  DR calculated HW-FLOP:  86.2940 TFLOP 
Wed Sep 04 01:36:51, Info:  DR calculated NZ-FLOP:  64.1635 TFLOP 
Wed Sep 04 01:36:51, Info:  PL calculated HW-FLOP:  0.0000 FLOP 
Wed Sep 04 01:36:51, Info:  PL calculated NZ-FLOP:  0.0000 FLOP 
Wed Sep 04 01:36:51, Info:  Time spent in simulation: 54.4216 s (min: 54.4214 s, max: 54.4234 s)
Wed Sep 04 01:36:51, Info:  Simulation done. 
Wed Sep 04 01:36:51, Info:  Closing IO. 
Wed Sep 04 01:36:52, Info:  Time fault writer backend: 357.1760 ms (min: 123.8926 ms, max: 2.7577 s)
Wed Sep 04 01:36:52, Info:  Time fault writer frontend: 3.1607 ms (min: 2.6402 ms, max: 3.5768 ms)
Wed Sep 04 01:36:52, Info:  Time free surface writer backend: 131.9576 ms (min: 5.5135 ms, max: 1.0178 s)
Wed Sep 04 01:36:52, Info:  Time free surface writer frontend: 130.4297 µs (min: 37.9740 µs, max: 362.8760 µs)
Wed Sep 04 01:36:52, Info:  SeisSol done. Goodbye. 
SeisSol complete.
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682 ~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/yaml_build_test/job_SHmax_40.0_nu_0.0
Writing hdf5 output with compression enabled (compression_level=4). 
Use --compression=0 if you want to speed-up data extraction.
u1: 0it [00:00, ?it/s]u1: 1it [00:00, 166.32it/s]
u2: 0it [00:00, ?it/s]u2: 1it [00:00, 173.34it/s]
u3: 0it [00:00, ?it/s]u3: 1it [00:00, 178.54it/s]
done writing output_jobid_3875682_extracted-surface.h5
done writing output_jobid_3875682_extracted-surface.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682/output_jobid_3875682_extracted-surface.xdmf
Working on JobID: 3875682
No matching file found for jobid 3875682. Assigning output-fault.xdmf instead
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682/output-fault.xdmf
warning: Mw computed over 0-85s (avoiding contribution of small residual moment after rupture)
jobid_3875682 moment magnitude: 5.244110888887304 (M0 = 9.3576e+16)
Finished writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682/moment_rate_mainshock.png
No matching file found for jobid 3875682. Looking for output-fault.xdmf instead
mu_s: 0.5
mu_d: 0.35
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682/output_jobid_3875682_extracted-fault.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682/output_jobid_3875682_extracted-fault.xdmf
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/regional-only/jobid_3875682/output_jobid_3875682_extracted-fault.h5
Job ID set as: 3875682
mu_s: 0.5
mu_d: 0.35
~/haiti-rupture-inputs/dynamic-rupture/regional-only/automated-runs/yaml_build_test/job_SHmax_40.0_nu_0.0
